--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
   accounting_system:
     container_name: accounting_system
     restart: always
-    build: ./website_netherlands
+    build: ./backend
     command:
       bash -c "
       python3 manage.py makemigrations --noinput &&
