--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       bash -c "
       python3 manage.py makemigrations --noinput &&
       python3 manage.py migrate --noinput &&
-      python3 manage.py runserver 0.0.0.0:80
+      python3 manage.py runserver
       "
     volumes:
       - ./backend:/backend
